from .storable import Storable

class Bteam(Storable):
    pass
