from .storable import Storable

class ScoringRule(Storable):
    pass
