from .storable import Storable

class SheepLivestock(Storable):
    pass
